<resources>
    <string name="app_name">Survey Apps</string>
    <string name="nomor">1</string>
    <string name="space">. </string>
    <string name="pertanyaan">Seberapa puaskan anda dengan pelayanan kami?</string>
    <string name="sangat_memuaskan">Sangat Memuaskan</string>
    <string name="id_sangat_memuaskan">1</string>
    <string name="memuaskan">Memuaskan</string>
    <string name="id_memuaskan">2</string>
    <string name="cukup">Cukup</string>
    <string name="id_cukup">3</string>
    <string name="kurang_memuaskan">Kurang Memuaskan</string>
    <string name="id_kurang_memuaskan">4</string>
    <string name="buruk">Buruk</string>
    <string name="id_buruk">5</string>
    <string name="sangat_buruk">Sangat Buruk</string>
    <string name="id_sangat_buruk">6</string>
    <string name="title_survey">Survey</string>
    <string name="submit">SUBMIT</string>
    <string name="title_home">SURVEY PELAYANAN</string>
</resources>